CHANGES
=======

0.3(Unreleased)
---------------

- Refactore date formatting to have the date locale aware.


0.2.1(2012-09-04)
-----------------

- Private blog entries should not be shown in the blog overview.


0.2.1a1(2012-08-21)
-------------------

- Move to fanstatic for include static resources.
- Convert SQLAlchemy tables to Declarative syntax.
- Fix how content types appear in Add menu.
- Document subclasses should not have duplicate 'body' field.
- Added batching of blog entries on overview and settings for it.
- Added dynamic batching via ajax loads.
- Added kotti_blog.asset_overrides attribute to settings.


0.1
---

- Initial release.