@@ -5,6 +5,10 @@ CHANGES
 ---------------
 
 - Refactore date formatting to have the date locale aware.
+- Changes for compatibility with Kotti>=0.8. These changes
+  are not backward compatibel. If you want to use kotti_blog
+  with Kotti<=0.7.x then pin kotti_blog to 0.2.1.
+  - Use form classes for the form views instead of deprecated generic functions.
 
 
 0.2.1(2012-09-04)
